--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Tarea 2: Usuarios</a>
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/']" routerLinkActive>Ver Usuarios</a>
+        <a class="nav-link" [routerLink]="['/usuarios']" routerLinkActive>Ver Usuarios</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/agregar']" routerLinkActive>Agregar Usuarios</a>
